--- a/adventure/yoho/yoho-compiler.html
+++ b/adventure/yoho/yoho-compiler.html
@@ -3,7 +3,7 @@
   <script type='text/javascript' src='yoho-compiler.js'></script>
 </head>
 <script>
-let compiler = new YOHO.Compiler();
+let compiler = new YC.Compiler();
 let result = compiler.load(src());
 console.log(result);
 function src() {
