--- a/adventure/yoho/yoho-editor.html
+++ b/adventure/yoho/yoho-editor.html
@@ -90,17 +90,22 @@ tile#head {
   background-color:#1c4c6d;
   height:34px;
   line-height:34px;
-  padding:0 10px 0 10px;
+  padding:0 10px 0 33px;
   font-family:'Calibri';
   font-size:14pt;
   font-weight:bold;
+}
+#jolly {
+  position:absolute;
+  top:5px;
+  left:-1px;
 }
 header {
   background-color:#2e2e2e;
   color:#bbbbbb;
   height:26px;
-  line-height:30px;
-  padding:0 10px;
+  line-height:28px;
+  padding:0 6px;
   font-family:'Calibri';
   font-size:10.5pt;
 }
@@ -131,7 +136,7 @@ header {
   {color:rgb(44,122,214)}
 #editor yellow, #editor word
   {color:rgb(226,192,141)}
-#editor orange, #editor arg
+#editor orange, #editor arg, span.arg
   {color:rgb(206,145,120)}
 #editor pink, #editor item, span.item
   {color:rgb(233, 146, 226)}
@@ -143,7 +148,7 @@ header {
   {color:rgb(83, 212, 130)}
 #editor dkgreen, #editor rdesc, span.roop
   {color:hsla(142, 51%, 57%, 0.699)}
-#editor string {
+#editor string, span.value {
   color:#999999;
 }
 #editor purple, #editor comment
@@ -153,10 +158,7 @@ header {
 }
 #editor bang {
   font-weight:bold;
-  margin-right:2px;
-}
-#editor semi {
-  margin-left:1px;
+  margin-right:1px;
 }
 #output {
   background-color:black;
@@ -182,20 +184,20 @@ uih {
   display:flex;
   background-color:#0a0a0a;
 }
-#itemsh span {
+uih span {
   flex-grow:0;
   flex-basis:50%;
   display:inline-block;
   color:#d0d0d0;
   padding-left:10px;
 }
-#items div {
+ui.list div {
   font-family:'Calibri';
   font-size:10.5pt;
   display:flex;
   background-color:#282828;
 }
-#items span {
+ui.list span {
   padding-left:10px;
   height:18px;
   line-height:18px;
@@ -211,7 +213,20 @@ uih {
   </head>
   <body>
     <tile id='body' class='flexcol'>
-      <tile id='head'>YOHO</tile>
+      <tile id='head'>
+        <span id='jolly'>
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="38px" height="27px" viewBox="0 0 3800 2720" preserveAspectRatio="xMidYMid meet">
+            <g id="layer102" fill="#fcfcfc" stroke="none">
+            <path d="M1099 2305 c-50 -27 -58 -91 -17 -144 26 -35 22 -59 -18 -103 -32 -36 -35 -44 -32 -91 3 -46 7 -54 38 -75 44 -29 87 -25 137 15 62 50 94 63 160 63 115 0 379 -88 693 -232 325 -149 354 -168 414 -286 36 -68 55 -93 88 -115 50 -32 77 -34 106 -7 26 25 29 69 7 130 -8 23 -15 44 -15 46 0 1 16 19 35 40 40 42 44 70 15 107 -30 38 -81 52 -137 37 l-46 -11 -236 115 c-335 162 -447 208 -776 316 -168 56 -186 65 -246 134 -62 70 -117 90 -170 61z"/>
+            <path d="M2621 2279 c-13 -5 -54 -38 -92 -73 -74 -70 -76 -71 -344 -146 -82 -23 -156 -46 -164 -50 -9 -5 8 -19 55 -44 111 -59 126 -61 237 -37 158 34 196 28 304 -49 62 -44 79 -48 124 -25 60 31 61 97 3 166 -19 22 -34 48 -34 57 1 10 14 33 30 52 48 56 40 109 -21 140 -42 22 -62 24 -98 9z"/>
+            <path d="M1446 1775 l-150 -75 -73 6 c-59 5 -77 4 -98 -10 -40 -26 -50 -57 -31 -95 9 -17 21 -31 26 -31 5 0 14 -9 20 -19 7 -15 5 -31 -10 -66 -27 -63 -26 -100 5 -130 56 -57 131 -18 188 97 29 59 48 85 80 106 43 30 316 170 375 192 17 7 32 17 32 22 0 15 -131 70 -175 75 -34 3 -63 -8 -189 -72z"/>
+            <path d="M1772 1639 c-90 -28 -137 -78 -183 -194 -82 -204 -82 -207 -72 -224 6 -9 17 -17 26 -19 32 -6 62 41 91 145 15 56 34 107 42 114 15 13 34 4 34 -17 0 -17 14 -18 41 -4 11 7 21 26 25 51 6 33 10 40 28 37 14 -2 22 -12 26 -33 11 -66 60 -29 60 46 0 22 5 29 20 29 17 0 20 -7 20 -44 0 -74 58 -91 70 -20 8 45 33 36 42 -14 9 -54 14 -62 42 -62 16 0 26 7 29 21 12 44 33 8 64 -107 32 -117 47 -144 84 -144 9 0 22 7 29 15 11 13 10 22 -4 51 -9 19 -33 86 -52 147 -31 97 -42 118 -79 153 -67 65 -125 88 -230 91 -68 2 -105 -3 -153 -18z"/>
+            <path d="M1841 1351 c-8 -5 -17 -31 -20 -58 -5 -39 -10 -48 -26 -48 -15 0 -21 8 -25 35 -11 74 -67 36 -79 -54 -4 -31 -10 -59 -14 -62 -12 -13 -86 -24 -160 -24 -70 0 -80 -3 -104 -26 -24 -24 -25 -30 -19 -85 4 -46 1 -74 -13 -117 -53 -156 -49 -261 14 -389 65 -131 174 -225 300 -258 80 -20 290 -20 370 0 155 41 246 115 317 263 39 80 43 95 46 182 3 74 -1 114 -17 178 -16 60 -19 87 -11 102 13 24 13 76 0 100 -13 25 -69 40 -148 40 -34 0 -78 7 -97 14 -34 14 -35 17 -35 68 0 54 -19 98 -44 98 -7 0 -19 -15 -27 -32 -21 -49 -43 -43 -50 15 -4 43 -19 66 -41 67 -12 0 -28 -37 -28 -63 0 -25 -22 -52 -33 -40 -4 3 -7 23 -7 43 0 20 -5 41 -12 48 -14 14 -18 15 -37 3z m142 -180 c39 -15 39 -37 1 -129 -41 -99 -58 -122 -89 -122 -18 0 -28 14 -53 68 -46 103 -56 145 -43 171 10 19 20 21 86 21 40 0 85 -4 98 -9z m-197 -185 c20 -23 24 -38 24 -99 0 -117 -36 -157 -142 -157 -57 0 -101 22 -117 57 -17 38 -14 155 5 182 26 36 71 52 143 48 55 -3 67 -7 87 -31z m389 24 c55 -13 72 -37 80 -119 8 -79 -3 -112 -48 -145 -53 -39 -179 -18 -207 33 -5 11 -10 53 -10 94 0 60 4 79 21 101 31 40 91 53 164 36z"/>
+            </g>
+          </svg>        
+        </span>
+        <span>YOHO Developer</span>
+      </tile>
       <tile class='grow1 flexrow'>
         <tile id='col2' class='grow30 flexcol'>
           <tile class='ui'>
@@ -235,7 +250,7 @@ uih {
               <header>Items</header>
               <tile class='grow1 flexcol'>
                 <uih id='itemsh'><span>Item</span><span>Room</span></uih>
-                <ui id='items' class='scroll'>
+                <ui id='items' class='list scroll'>
                   <div><span class='item'>stake</span><span class='room'>inventory</span></div>
                 </ui>
               </tile>
@@ -244,11 +259,15 @@ uih {
           <tile class='grow40 flexrow'>
             <tile class='ui grow50'>
               <header>Bits</header>
-              <ui id='bits' class='scroll'></ui>
+              <uih id='bitsh'><span>Bit</span><span>Value</span></uih>
+              <ui id='bits' class='list scroll'>
+                <div><span class='arg'>intro</span><span class='value'>0</span></div>
+              </ui>
             </tile>
             <tile class='ui grow50'>
               <header>Counters</header>
-              <ui id='ctrs' class='scroll'></ui>
+              <uih id='ctrsh'><span>Counter</span><span>Value</span></uih>
+              <ui id='ctrs' class='list scroll'></ui>
             </tile>
           </tile>
         </tile>
