--- a/adventure/adventure7.html
+++ b/adventure/adventure7.html
@@ -16,10 +16,13 @@ body {
 screen {
   margin:60pt auto 0 auto;
   font-size:20pt;
-  font-family:Consolas;
+  font-family:Segoe UI;
   line-height:30pt;
   color:aquamarine;
   width:830pt;
+}
+span.cmd {
+  color:white;
 }
 header {
   color:white;
