--- a/yordle/yordleai.html
+++ b/yordle/yordleai.html
@@ -7,12 +7,12 @@
   <script type='text/javascript' src='yordleai.js?3'></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=M PLUS Rounded 1c:wght@700&display=swap" rel="stylesheet">
   <style>
 body {
   margin:0;
   background-color:#000;
-  font-family:'Roboto', sans-serif;
+  font-family:'M PLUS Rounded 1c', sans-serif;
 }
 #board {
   padding:40px 0;
@@ -26,7 +26,7 @@ header {
   font-size:40px;
   font-weight:bold;
   color:deepskyblue;
-  letter-spacing:4px;
+  letter-spacing:2px;
 }
 #grid {
   margin:2em auto 2em auto;
@@ -81,7 +81,7 @@ header {
   text-transform:uppercase;
   background-color:#818384;
   color:white;
-  font-family:'Roboto';
+  font-family:'M PLUS Rounded 1c';
   font-size:15px;
 }
 #keyboard .bs {
@@ -112,7 +112,7 @@ header {
   text-transform:uppercase;
   background-color:#818384;
   color:white;
-  font-family:'Roboto';
+  font-family:'M PLUS Rounded 1c';
   font-size:15px;
 }
 #ai button.dis {
